[package]
name = "echoip"
version = "0.1.0"
authors = ["Attenuation <ouyangjun1999@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6.2"
futures = "0.1.28"
hyper = "0.12.31"
log = "0.4.6"
pretty_env_logger = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
regex = "1.1.9"
lazy_static = "1.3.0"